# kukuri

./: .dockerignore  .editorconfig  .env.community-node.example  .env.default  .env.example  .eslintrc.cjs  .eslintrc.json.template  .gitattributes  .gitignore  .gitmodules  .mcp.json  .prettierrc  AGENTS.local.md.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.test  PLANS.md  README.ja.md  README.md  REFACTORING.md  compose.yaml  config.toml  docker-compose.community-node.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.mjs  jest.config.ts  kilo.json  kukuri-rebuild-plan.md  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/rust-peer/: Cargo.toml
apps/rust-peer/src/: main.rs
crates/app-api/: Cargo.toml
crates/app-api/src/: direct_messages.rs  game.rs  lib.rs  live.rs  media.rs  notifications.rs  private_channels.rs  reactions.rs  service.rs  social.rs  sync.rs  timeline.rs  views.rs
crates/blob-service/: Cargo.toml
crates/blob-service/src/: lib.rs
crates/cn-cli/: Cargo.toml
crates/cn-cli/src/: main.rs
crates/cn-core/: Cargo.toml
crates/cn-core/migrations/: 202603160001_init.sql  202603180001_peer_registrations.sql  202603180002_peer_registration_ttl.sql  202606190001_reports.sql  202606250001_admission.sql  202606300001_safety_events.sql  202607010001_index_scope.sql
crates/cn-core/src/: admission.rs  auth.rs  bootstrap.rs  config.rs  consents.rs  database.rs  env.rs  errors.rs  index_scope.rs  lib.rs  models.rs  normalize.rs  rendezvous.rs  reports.rs  rollout.rs  safety_events.rs
crates/cn-core/tests/: index_scope.rs  runtime_init.rs  safety_events.rs
crates/cn-indexer/: Cargo.toml
crates/cn-indexer/src/: arcadedb.rs  config.rs  ingest.rs  lib.rs  main.rs  participant.rs  projection.rs  runtime.rs
crates/cn-indexer/tests/: ingestion_contracts.rs
crates/cn-iroh-relay/: Cargo.toml
crates/cn-iroh-relay/src/: lib.rs  main.rs
crates/cn-operator/: Cargo.toml
crates/cn-operator/src/: capability.rs  capability_risk.rs  config.rs  deploy.rs  docs.rs  drift.rs  lib.rs  main.rs  manifest.rs  profile.rs  safety_config.rs  safety_readiness.rs
crates/cn-operator/tests/: deploy.rs  generate.rs  safety.rs
crates/cn-relay/: Cargo.toml
crates/cn-relay/src/: lib.rs  main.rs
crates/cn-relay/tests/: contract.rs
crates/cn-safety/: Cargo.toml
crates/cn-safety-runtime/: Cargo.toml
crates/cn-safety-runtime/src/: artifacts.rs  clock.rs  error.rs  id.rs  lib.rs  orchestrator.rs  signer.rs
crates/cn-safety-runtime/tests/: clock.rs  id.rs  orchestrator.rs  signer.rs
crates/cn-safety/src/: capability.rs  event.rs  lib.rs  mock.rs  policy.rs  provider.rs  signal.rs  verdict.rs
crates/cn-safety/tests/: domain_model.rs  policy_router.rs
crates/cn-user-api/: Cargo.toml
crates/cn-user-api/src/: lib.rs  main.rs
crates/cn-user-api/tests/: contract.rs  indexing_requests.rs  manifest.rs  rate_limit.rs  reports.rs
crates/community-node-cli/: Cargo.toml
crates/community-node-cli/src/: main.rs
crates/community-node-core/: Cargo.toml
crates/community-node-core/src/: lib.rs
crates/community-node-iroh-relay/: Cargo.toml
crates/community-node-iroh-relay/src/: main.rs
crates/community-node-user-api/: Cargo.toml
crates/community-node-user-api/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: crypto.rs  direct_messages.rs  envelope.rs  game.rs  ids.rs  lib.rs  live.rs  media.rs  posts.rs  private_channels.rs  profile.rs  reactions.rs  rendezvous.rs
crates/desktop-runtime/: Cargo.toml
crates/desktop-runtime/src/: attachments.rs  community_node.rs  discovery.rs  identity.rs  lib.rs  paths.rs  requests.rs  runtime.rs  stack.rs
crates/docs-sync/: Cargo.toml
crates/docs-sync/src/: access.rs  iroh_sync.rs  lib.rs  memory.rs  node.rs  replicas.rs  types.rs
crates/harness/: Cargo.toml
crates/harness/src/: artifacts.rs  lib.rs  runtime.rs  scenario.rs  waiters.rs
crates/store/: Cargo.toml
crates/store/migrations/: 20260310000000_initial.down.sql  20260310000000_initial.up.sql  20260312000000_projection_store.down.sql  20260312000000_projection_store.up.sql  20260315000000_live_game_projection.down.sql  20260315000000_live_game_projection.up.sql  20260319000000_social_graph.down.sql  20260319000000_social_graph.up.sql  20260319010000_channel_scope_projection.down.sql  20260319010000_channel_scope_projection.up.sql  20260328000000_repost_projection.down.sql  20260328000000_repost_projection.up.sql  20260328010000_reaction_projection.down.sql  20260328010000_reaction_projection.up.sql  20260329000000_profile_avatar_blob_columns.up.sql  20260330000000_reaction_recent_and_search_key.down.sql  20260330000000_reaction_recent_and_search_key.up.sql  (+14 more)
crates/store/src/: lib.rs  (+6 more)
crates/transport/: Cargo.toml
kukuri-cli/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
kukuri-cli/scripts/: docker-entrypoint.sh  test-docker.ps1
kukuri-cli/src/: bootstrap_cache.rs  main.rs
kukuri-cli/tests/: docker-compose.test.yml  docker_connectivity.rs
kukuri-community-node/: .env.example  .env.home-vps-edge.example  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml
kukuri-community-node/migrations/: 20260123000000_init.sql  20260124000000_m2.sql  20260126000000_m4_moderation.sql  20260127000000_m5_trust.sql  20260207000000_m4_llm_runtime_limits.sql  20260211000000_access_control_distribution_results.sql  20260212010000_m4_label_review_workflow.sql  20260216030000_m7_post_search_documents.sql  20260216040000_m8_post_search_documents_topic_key.sql  20260216050000_m9_community_search_terms.sql  20260216060000_m10_age_graph_sync.sql  20260216070000_m11_suggest_rerank_runtime_flags.sql  20260216080000_m12_search_backfill_shadow.sql
kukuri-tauri/src-tauri/: Cargo.toml  bootstrap_nodes.json  build.rs  build_all.txt  err.txt  tauri.conf.json
legacy/kukuri-community-node/: .env.example  .env.home-vps-edge.example  Cargo.toml  Dockerfile  docker-compose.yml
(+2853 files in other folders)
