[workspace]
members = [
    "xtask",
    "crates/core",
    "crates/store",
    "crates/transport",
    "crates/docs-sync",
    "crates/blob-service",
    "crates/harness",
    "crates/app-api",
    "crates/desktop-runtime",
    "crates/cn-core",
    "crates/cn-user-api",
    "crates/cn-relay",
    "crates/cn-iroh-relay",
    "crates/cn-cli",
]
exclude = [
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["ws"] }
base64 = "0.22.1"
blake3 = "1.8.3"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
futures-util = "0.3.32"
hex = "0.4.3"
httpdate = "1.0.3"
iroh = { version = "0.96.1", features = ["address-lookup-mdns", "address-lookup-pkarr-dht"] }
iroh-docs = "0.96.0"
iroh-blobs = "0.98.0"
iroh-gossip = "0.96.0"
iroh-relay = { version = "0.96.1", features = ["server"] }
jsonwebtoken = "9.3.1"
keyring = { version = "3.6.3", default-features = false }
nostr-sdk = { version = "0.44.1", features = ["nip04", "nip44"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "postgres", "json", "migrate", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = "0.26.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tempfile = "3.25.0"
pkarr = { version = "=5.0.2", default-features = false, features = ["relays", "dht"] }
tower-http = { version = "0.6.6", features = ["trace"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
