[workspace]
members = [
    "xtask",
    "crates/core",
    "crates/store",
    "crates/transport",
    "crates/docs-sync",
    "crates/blob-service",
    "crates/harness",
    "crates/app-api",
    "crates/desktop-runtime",
    "crates/cn-core",
    "crates/cn-user-api",
    "crates/cn-iroh-relay",
    "crates/cn-cli",
]
exclude = [
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.1"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22.1"
bech32 = "0.11.1"
blake3 = "1.8.4"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
futures-util = "0.3.32"
hex = "0.4.3"
hkdf = "0.12.4"
hmac = "0.12.1"
httpdate = "1.0.3"
image = { version = "0.25.10", default-features = false, features = ["png", "gif", "jpeg", "webp"] }
iroh = "1.0.0-rc.1"
iroh-docs = "0.100.0"
iroh-blobs = "0.102.0"
iroh-gossip = "0.100.0"
iroh-mainline-address-lookup = "0.3.0"
iroh-relay = { version = "1.0.0-rc.1", features = ["server"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
keyring = { version = "3.6.3", default-features = false }
chacha20poly1305 = "0.10.1"
n0-mainline = "0.4.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
redis = { version = "1.2.2", default-features = false, features = ["tokio-comp"] }
rustls = { version = "0.23.38", default-features = false, features = ["ring", "std"] }
secp256k1 = { version = "0.31.1", features = ["global-context", "rand", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "postgres", "json", "migrate", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-tungstenite = "0.29.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tempfile = "3.27.0"
pkarr = { version = "=5.0.2", default-features = false, features = ["relays", "dht"] }
tower-http = { version = "0.6.8", features = ["trace"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
