[package]
name = "kukuri-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# P2P and networking (same versions as kukuri-tauri)
iroh = { version = "0.91.1", features = ["discovery-pkarr-dht", "discovery-local-network"] }
iroh-gossip = "0.91.0"
blake3 = "1.5"

# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Serialization
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration
config = "0.14"

# Utils
base64 = "0.22"
rand = "0.8"
futures = "0.3"
