[package]
name = "kukuri-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# P2P and networking (same versions as kukuri-tauri)
iroh = { version = "0.95.1", features = ["discovery-pkarr-dht", "discovery-local-network"] }
iroh-gossip = "0.95.0"
blake3 = "1.8.2"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Serialization
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5.53", features = ["derive", "env"] }

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Configuration
config = "0.15.19"

# Utils
base64 = "0.22.1"
rand = "0.9.2"
futures = "0.3.31"
dirs = "6.0.0"
hex = "0.4.3"
