[package]
name = "rust-peer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.27", features = ["derive", "env"] }
env_logger = "0.11.6"
futures = "0.3.31"
futures-timer = "3.0.3"
libp2p = { version = "0.55.0", features = ["identify", "ping", "tokio", "gossipsub", "macros", "relay", "kad", "rsa", "ed25519", "quic", "request-response", "dns", "memory-connection-limits", "yamux"] }
libp2p-webrtc = { version = "0.9.0-alpha", features = ["tokio", "pem"] }
log = "0.4.25"
rand = "0.8.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1.86"
