[package]
name = "kukuri-app-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
futures-util.workspace = true
nostr-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
chrono.workspace = true
tracing.workspace = true
kukuri-core = { path = "../core" }
kukuri-blob-service = { path = "../blob-service" }
kukuri-docs-sync = { path = "../docs-sync" }
kukuri-store = { path = "../store" }
kukuri-transport = { path = "../transport" }

[dev-dependencies]
tempfile.workspace = true
