[package]
name = "kukuri-cn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cn-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
kukuri-cn-core = { path = "../cn-core" }
