[package]
name = "kukuri-cn-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
redis.workspace = true
sha2.workspace = true
hex.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
kukuri-core = { path = "../core" }
kukuri-cn-safety = { path = "../cn-safety" }
kukuri-cn-safety-runtime = { path = "../cn-safety-runtime" }

[dev-dependencies]
tempfile.workspace = true
kukuri-cn-safety = { path = "../cn-safety" }
kukuri-cn-safety-runtime = { path = "../cn-safety-runtime" }
