[package]
name = "kukuri-cn-iroh-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cn-iroh-relay"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
iroh-relay.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
