[package]
name = "kukuri-cn-iroh-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cn-iroh-relay"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
iroh-relay.workspace = true
rustls.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
