[package]
name = "kukuri-cn-operator"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "kukuri_cn_operator"
path = "src/lib.rs"

[[bin]]
name = "cn-operator"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true
