[package]
name = "kukuri-cn-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cn-relay"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
nostr-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
kukuri-cn-core = { path = "../cn-core" }
kukuri-core = { path = "../core" }

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
tokio-tungstenite.workspace = true
