[package]
name = "kukuri-cn-safety-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "kukuri_cn_safety_runtime"
path = "src/lib.rs"

[dependencies]
kukuri-cn-safety = { path = "../cn-safety" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
kukuri-cn-safety = { path = "../cn-safety", features = ["mock"] }
serde_json.workspace = true
tokio.workspace = true
