[package]
name = "kukuri-cn-safety-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "kukuri_cn_safety_runtime"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
hex.workspace = true
kukuri-cn-safety = { path = "../cn-safety" }
kukuri-core = { path = "../core" }
secp256k1.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
kukuri-cn-safety = { path = "../cn-safety", features = ["mock"] }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true