[package]
name = "kukuri-cn-user-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cn-user-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
kukuri-cn-core = { path = "../cn-core" }

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
