[package]
name = "kukuri-community-node-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
kukuri-community-node-core = { path = "../community-node-core" }
