[package]
name = "kukuri-community-node-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
nostr-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
kukuri-core = { path = "../core" }

[dev-dependencies]
tempfile.workspace = true
