[package]
name = "kukuri-community-node-iroh-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
iroh-relay.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
