[package]
name = "kukuri-community-node-user-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
kukuri-community-node-core = { path = "../community-node-core" }

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
