[package]
name = "kukuri-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bech32.workspace = true
blake3.workspace = true
hex.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
