[package]
name = "kukuri-desktop-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
blake3.workspace = true
chrono.workspace = true
image.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
kukuri-app-api = { path = "../app-api" }
kukuri-blob-service = { path = "../blob-service" }
kukuri-cn-core = { path = "../cn-core" }
kukuri-core = { path = "../core" }
kukuri-docs-sync = { path = "../docs-sync" }
kukuri-store = { path = "../store" }
kukuri-transport = { path = "../transport" }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["sync-secret-service"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
pkarr.workspace = true
iroh = { workspace = true, features = ["test-utils"] }
