[package]
name = "kukuri-docs-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
futures-util.workspace = true
iroh.workspace = true
iroh-blobs.workspace = true
iroh-docs.workspace = true
iroh-gossip.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
kukuri-core = { path = "../core" }
kukuri-transport = { path = "../transport" }

[dev-dependencies]
tempfile.workspace = true
