[package]
name = "kukuri-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
kukuri-app-api = { path = "../app-api" }
kukuri-core = { path = "../core" }
kukuri-store = { path = "../store" }
kukuri-transport = { path = "../transport" }
