[package]
name = "kukuri-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
chrono.workspace = true
futures-util.workspace = true
iroh.workspace = true
iroh-gossip.workspace = true
pkarr.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
kukuri-core = { path = "../core" }

[dev-dependencies]
iroh = { workspace = true, features = ["test-utils"] }
