[package]
name = "kukuri-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kukuri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Nostr Protocol
nostr-sdk = "0.42.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }
tokio = { version = "1.44", features = ["full"] }

# P2P Networking
iroh = "0.90.0"
iroh-gossip = "0.90.0"
lru = "0.16.0"
bytes = "1.10.1"
futures = "0.3"
bincode = "2.0.1"

# Cryptography
secp256k1 = { version = "0.29", features = ["rand", "serde"] }
aes-gcm = "0.10"
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
keyring = "3.7"

[dev-dependencies]
tempfile = "3.17"

