[package]
name = "kukuri-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"
default-run = "kukuri-tauri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kukuri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
semver = "1.0"
tauri = { version = "2.9.5", features = ["test"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"

# Nostr Protocol
nostr-sdk = { version = "0.44.1", features = ["nip04"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1.44", features = ["full"] }

# P2P Networking
iroh = { version = "0.95.1", features = ["discovery-pkarr-dht", "discovery-local-network"] }
iroh-gossip = "0.95.0"
# distributed-topic-tracker = "0.1.1"  # Deprecated: Using iroh's built-in DHT discovery instead
lru = "0.16.0"
bytes = "1.10.1"
futures = "0.3"
bincode = { version = "2.0.1", features = ["serde"] }

# Cryptography
secp256k1 = { version = "0.29", features = ["rand", "serde"] }
aes-gcm = "0.10"
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
rand_core = { version = "0.9", features = ["std", "os_rng"] }
hex = "0.4"

# Architecture support
async-trait = "0.1"
blake3 = "1.5"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
keyring = { version = "3.6.3", features = ["windows-native"] }
dirs = "5.0"
bech32 = "0.9"
prometheus = "0.14.0"
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3.17"
criterion = { version = "0.5", features = ["async_tokio"] }
mockall = "0.13"

# [[bench]]
# name = "command_optimization"
# harness = false
