[package]
name = "kukuri-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"
default-run = "kukuri-tauri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kukuri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
semver = "1.0.27"
tauri = { version = "2.10.2", features = ["test"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
once_cell = "1.21.3"

# Nostr Protocol
nostr-sdk = { version = "0.44.1", features = ["nip04", "nip44"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1.49.0", features = ["full"] }

# P2P Networking
iroh = { version = "0.96.1", features = ["address-lookup-pkarr-dht", "address-lookup-mdns"] }
iroh-gossip = "0.96.0"
# distributed-topic-tracker = "0.1.1"  # Deprecated: Using iroh's built-in DHT discovery instead
lru = "0.16.3"
bytes = "1.11.1"
futures = "0.3.32"
bincode = { version = "2.0.1", features = ["serde"] }

# Cryptography
secp256k1 = { version = "0.31.1", features = ["rand", "serde", "global-context"] }
aes-gcm = "0.10.3"
sha2 = "0.10.9"
argon2 = "0.5.3"
rand = "0.10.0"
base64 = "0.22.1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "rustls"] }
rand_core = "0.10.0"
hex = "0.4.3"

# Architecture support
async-trait = "0.1.89"
blake3 = "1.8.3"

# Utilities
anyhow = "1.0.101"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
keyring = { version = "3.6.3", features = ["windows-native"] }
dirs = "6.0.0"
bech32 = "0.11.1"
prometheus = "0.14.0"
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3.25.0"
criterion = { version = "0.8.2", features = ["async_tokio"] }
mockall = "0.14.0"

# [[bench]]
# name = "command_optimization"
# harness = false
