[workspace]
members = [
  "crates/cn-admin-api",
  "crates/cn-bootstrap",
  "crates/cn-cli",
  "crates/cn-core",
  "crates/cn-index",
  "crates/cn-kip-types",
  "crates/cn-moderation",
  "crates/cn-relay",
  "crates/cn-trust",
  "crates/cn-user-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.101"
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["macros", "json", "ws"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
base64 = "0.22.1"
blake3 = "1.8.3"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.59", features = ["derive", "env"] }
dirs = "6.0.0"
futures-util = "0.3.32"
hex = "0.4.3"
httpdate = "1.0.3"
iroh = { version = "0.96.1", features = ["address-lookup-pkarr-dht", "address-lookup-mdns"] }
iroh-gossip = "0.96.0"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
nostr-sdk = { version = "0.44.1", features = ["nip04", "nip44"] }
reqwest = { version = "0.13.2", features = ["json", "rustls", "query"] }
rand_core = "0.6.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate", "json", "uuid", "chrono"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["request-id", "trace", "timeout", "limit"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json", "env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
unicode-normalization = "0.1.25"
uuid = { version = "1.21.0", features = ["v4"] }
prometheus = "0.14.0"
