[package]
name = "kukuri-desktop-tauri"
version = "0.1.0"
edition = "2024"
default-run = "kukuri-desktop-tauri"

[lib]
name = "kukuri_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
kukuri-app-api = { path = "../../../crates/app-api" }
kukuri-desktop-runtime = { path = "../../../crates/desktop-runtime" }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.10.2", features = [] }
