[package]
name = "cn-admin-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
blake3.workspace = true
chrono.workspace = true
nostr-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true
reqwest.workspace = true

cn-core = { path = "../cn-core" }
