[package]
name = "cn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cn"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
blake3.workspace = true
clap.workspace = true
dirs.workspace = true
hex.workspace = true
iroh.workspace = true
iroh-gossip.workspace = true
nostr-sdk.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

cn-admin-api = { path = "../cn-admin-api" }
cn-bootstrap = { path = "../cn-bootstrap" }
cn-core = { path = "../cn-core" }
cn-relay = { path = "../cn-relay" }
cn-user-api = { path = "../cn-user-api" }
